[FT:#3622] Remove VIVL directory from tests with mocha, jest is more appropriate

--- a/GPCCHS_E_VIS/src/client/src/impl/js/client/package.json
+++ b/GPCCHS_E_VIS/src/client/src/impl/js/client/package.json
@@ -167,8 +167,7 @@
       "lib/windowProcess/**"
     ],
     "include": [
-      "lib/**/*.js",
-      "VIVL/**/*.js"
+      "lib/**/*.js"
     ],
     "reporter": [
       "lcov",
