--- a/GPCCHS_E_VIS/src/client/src/impl/js/client/package.json
+++ b/GPCCHS_E_VIS/src/client/src/impl/js/client/package.json
@@ -77,6 +77,7 @@
     "react-redux": "^4.4.5",
     "react-select": "^1.0.0-rc.2",
     "react-stockcharts": "^0.6.0-beta.11",
+    "recompose": "^0.21.2",
     "redux": "^3.6.0",
     "redux-electron-store": "^0.4.1",
     "redux-form": "^6.2.1",
