--- a/GPCCHS_E_VIS/src/client/src/impl/js/client/config.sample.json
+++ b/GPCCHS_E_VIS/src/client/src/impl/js/client/config.sample.json
@@ -4,9 +4,8 @@
   "MONITORING": "off",
   "DEBUG": "on",
   "FMD_ROOT_DIR": "/data/work/gitRepositories/LPISIS/GPCCHS/GPCCHS_E_VIS/src/client/src/impl/js/client/data",
-  "HSS": "http://127.0.0.1:3000",
-  "SERVER_PORT": 3000,
   "WEBPACK_PORT": 3100,
+  "NODE_PATH": "/usr/share/isis/node-v6.3.0-linux-x64/bin/node",
   "ZMQ_GPCCDC_PUSH": "tcp://127.0.0.1:5042",
   "ZMQ_GPCCDC_PULL": "tcp://127.0.0.1:49165",
   "OPEN": "small.workspace.json",
