--- a/GPCCHS_E_VIS/src/client/src/impl/js/client/package.json
+++ b/GPCCHS_E_VIS/src/client/src/impl/js/client/package.json
@@ -71,6 +71,7 @@
     "mkdirp": "^0.5.1",
     "moment": "^2.17.1",
     "node-uuid": "^1.4.7",
+    "ramda": "^0.23.0",
     "react": "^15.3.2",
     "react-bootstrap": "^0.30.5",
     "react-codemirror": "^0.3.0",
