[FT:#3622] Fix log module for new process architecture

--- a/GPCCHS_E_VIS/src/common/src/main/js/common/package.json
+++ b/GPCCHS_E_VIS/src/common/src/main/js/common/package.json
@@ -17,6 +17,7 @@
     "lodash": "^4.17.2",
     "minimist": "^1.2.0",
     "protobufjs": "^5.0.1",
+    "ramda": "^0.22.0",
     "winston": "^2.3.0",
     "ws": "^1.1.1",
     "zmq": "^2.15.3"
