[FT:#3622] fix test, missing dep enzyme and enzyme-to-json

--- a/GPCCHS_E_VIS/src/client/src/impl/js/client/package.json
+++ b/GPCCHS_E_VIS/src/client/src/impl/js/client/package.json
@@ -117,6 +117,8 @@
     "electron-devtools-installer": "^2.0.1",
     "electron-packager": "^8.0.0",
     "electron-rebuild": "^1.2.1",
+    "enzyme": "^2.7.0",
+    "enzyme-to-json": "^1.4.5",
     "eslint": "^3.10.2",
     "eslint-config-airbnb": "^13.0.0",
     "eslint-import-resolver-webpack": "^0.6.0",
