--- a/GPCCHS_E_VIS/src/client/src/impl/js/client/package.json
+++ b/GPCCHS_E_VIS/src/client/src/impl/js/client/package.json
@@ -78,6 +78,7 @@
     "react-color": "^2.10.0",
     "react-dimensions": "^1.3.0",
     "react-dom": "^15.3.2",
+    "react-flatpickr": "^3.0.0",
     "react-grid-layout": "^0.13.8",
     "react-redux": "^4.4.5",
     "react-select": "^1.0.0-rc.2",
