--- a/GPCCHS_E_VIS/src/client/pom.xml
+++ b/GPCCHS_E_VIS/src/client/pom.xml
@@ -46,5 +46,12 @@
       <classifier>unix_dev</classifier>
       <optional>true</optional>
     </dependency>
+    <dependency>
+      <groupId>fr.cnes.lpisis.gpcc.js</groupId>
+      <artifactId>gpcchs_e_vis_server</artifactId>
+      <type>isis-js-bundle</type>
+      <classifier>unix_dev</classifier>
+      <optional>true</optional>
+    </dependency>
   </dependencies>
 </project>
