--- a/GPCCHS_E_VIS/src/server/src/impl/js/server/package.json
+++ b/GPCCHS_E_VIS/src/server/src/impl/js/server/package.json
@@ -16,7 +16,8 @@
     "async": "^2.1.4",
     "exit": "^0.1.2",
     "lodash": "^4.16.2",
-    "lokijs": "^1.4.1"
+    "lokijs": "^1.4.1",
+    "node-uuid": "^1.4.7"
   },
   "devDependencies": {
     "chai": "^3.5.0",
@@ -27,8 +28,7 @@
     "eslint-plugin-import": "^2.2.0",
     "istanbul": "^0.4.5",
     "mocha": "^3.2.0",
-    "node-fetch": "^1.6.3",
-    "node-uuid": "^1.4.7"
+    "node-fetch": "^1.6.3"
   },
   "peerDependencies": {
     "common": "../../../../../common/src/main/js/common"
