--- a/GPCCHS_E_VIS/src/client/src/impl/js/client/package.json
+++ b/GPCCHS_E_VIS/src/client/src/impl/js/client/package.json
@@ -65,7 +65,7 @@
     "electron-debug": "^1.0.1",
     "html-to-react": "^1.2.2",
     "htmlhint": "^0.9.13",
-    "js-beautify": "^1.6.4",
+    "js-beautify": "1.6.4",
     "lodash": "^4.16.2",
     "mkdirp": "^0.5.1",
     "moment": "^2.17.1",
