--- a/GPCCHS_E_VIS/src/client/src/impl/js/client/package.json
+++ b/GPCCHS_E_VIS/src/client/src/impl/js/client/package.json
@@ -81,7 +81,7 @@
     "react-grid-layout": "^0.13.8",
     "react-redux": "^4.4.5",
     "react-select": "^1.0.0-rc.2",
-    "react-stockcharts": "^0.6.0-beta.11",
+    "react-stockcharts": "0.6.0-beta.11",
     "recompose": "^0.21.2",
     "redux": "^3.6.0",
     "redux-electron-store": "^0.4.1",
