--- a/GPCCHS_E_VIS/src/client/src/impl/js/client/package.json
+++ b/GPCCHS_E_VIS/src/client/src/impl/js/client/package.json
@@ -112,7 +112,7 @@
     "deep-freeze": "0.0.1",
     "del": "^2.2.2",
     "devtron": "^1.3.0",
-    "electron": "^1.4.10",
+    "electron": "1.4.14",
     "electron-devtools-installer": "^2.0.1",
     "electron-packager": "^8.0.0",
     "electron-rebuild": "^1.2.1",
