[FT:#3622] productLog add lockfile and refacto async code

--- a/GPCCHS_E_VIS/src/client/src/impl/js/client/config.default.json
+++ b/GPCCHS_E_VIS/src/client/src/impl/js/client/config.default.json
@@ -1,6 +1,6 @@
 {
   "LOG": "console",
-  "LOG_FOLDER": "log",
+  "LOG_DIR": "log",
   "PROFILING": "off",
   "MONITORING": "off",
   "DEBUG": "off",
