--- a/GPCCHS_E_VIS/src/client/src/impl/js/client/package.json
+++ b/GPCCHS_E_VIS/src/client/src/impl/js/client/package.json
@@ -66,6 +66,7 @@
     "html-to-react": "^1.2.2",
     "htmlhint": "^0.9.13",
     "js-beautify": "1.6.4",
+    "lockfile": "^1.0.3",
     "lodash": "^4.16.2",
     "mkdirp": "^0.5.1",
     "moment": "^2.17.1",
