--- a/GPCCHS_E_VIS/src/launcher/pom.xml
+++ b/GPCCHS_E_VIS/src/launcher/pom.xml
@@ -30,6 +30,20 @@
       <optional>true</optional>
     </dependency>
     <dependency>
+      <groupId>fr.cnes.lpisis.gpcc.js</groupId>
+      <artifactId>gpcchs_e_vis_server</artifactId>
+      <type>isis-js-bundle</type>
+      <classifier>unix_dev</classifier>
+      <optional>true</optional>
+    </dependency>
+    <dependency>
+      <groupId>fr.cnes.lpisis.gpcc.js</groupId>
+      <artifactId>gpcchs_e_vis_common</artifactId>
+      <type>isis-js-module-dependency</type>
+      <classifier>unix_dev</classifier>
+      <optional>true</optional>
+    </dependency>
+    <dependency>
       <groupId>fr.cnes.lpisis.cots</groupId>
       <artifactId>zmq</artifactId>
       <type>isis-cots</type>
@@ -38,6 +52,12 @@
       <groupId>fr.cnes.lpisis.cots</groupId>
       <artifactId>node</artifactId>
       <type>isis-cots</type>
+    </dependency>
+    <dependency>
+      <groupId>fr.cnes.lpisis.cots</groupId>
+      <artifactId>npm_cache</artifactId>
+      <type>isis-cots</type>
+      <optional>true</optional>
     </dependency>
   </dependencies>
 </project>
