--- a/GPCCHS_E_VIS/src/client/src/impl/js/client/config.sample.json
+++ b/GPCCHS_E_VIS/src/client/src/impl/js/client/config.sample.json
@@ -8,6 +8,6 @@
   "NODE_PATH": "/usr/share/isis/node-v6.3.0-linux-x64/bin/node",
   "ZMQ_GPCCDC_PUSH": "tcp://127.0.0.1:5042",
   "ZMQ_GPCCDC_PULL": "tcp://127.0.0.1:5043",
-  "WORKSPACE": "small.workspace.json",
+  "WORKSPACE": "dev.workspace.json",
   "STUB_DC_ON": "on"
 }
