--- a/GPCCHS_E_VIS/src/client/src/impl/js/client/package.json
+++ b/GPCCHS_E_VIS/src/client/src/impl/js/client/package.json
@@ -151,6 +151,7 @@
     "react-addons-test-utils": "^15.3.2",
     "react-test-renderer": "^15.4.1",
     "redux-logger": "^2.6.1",
+    "rimraf": "^2.5.4",
     "sinon": "^1.17.6",
     "spectron": "^3.4.0",
     "style-loader": "^0.13.1",
