--- a/GPCCHS_E_VIS/src/client/src/main/js/client/.eslintrc
+++ b/GPCCHS_E_VIS/src/client/src/main/js/client/.eslintrc
@@ -36,7 +36,9 @@
     "react/prefer-stateless-function": 0,
     "generator-star-spacing": 0,
     "react/forbid-prop-types": 0,
-    "react/no-unused-prop-types": ["warn", { "customValidators": [], "skipShapeProps": true }]
+    "react/require-default-props": 0,
+    "react/no-unused-prop-types": ["warn", { "customValidators": [], "skipShapeProps": true }],
+    "react/no-array-index-key": ["warn"]
   },
   "plugins": [
     "import",
