--- a/GPCCHS_E_VIS/src/client/src/main/js/client/package.json
+++ b/GPCCHS_E_VIS/src/client/src/main/js/client/package.json
@@ -60,12 +60,10 @@
     "d3-time-format": "^2.0.3",
     "debug": "^2.2.0",
     "deep-diff": "^0.3.4",
-    "depd": "^1.1.0",
-    "dotenv-safe": "^3.0.0",
     "electron-debug": "^1.0.1",
     "html-to-react": "^1.2.2",
     "htmlhint": "^0.9.13",
-    "js-beautify": "1.6.4",
+    "js-beautify": "1.6.8",
     "lockfile": "^1.0.3",
     "lodash": "^4.16.2",
     "mkdirp": "^0.5.1",
@@ -79,10 +77,10 @@
     "react-dom": "^15.3.2",
     "react-flatpickr": "^3.0.0",
     "react-grid-layout": "^0.13.8",
-    "react-redux": "^4.4.5",
+    "react-redux": "5.0.2",
     "react-select": "^1.0.0-rc.2",
-    "react-stockcharts": "0.6.0-beta.11",
-    "recompose": "^0.21.2",
+    "react-stockcharts": "0.6.1",
+    "recompose": "0.22.0",
     "redux": "^3.6.0",
     "redux-electron-store": "^0.4.1",
     "redux-form": "^6.4.3",
@@ -92,10 +90,10 @@
     "updeep": "^1.0.0"
   },
   "devDependencies": {
-    "asar": "^0.12.3",
+    "asar": "0.13.0",
     "babel-core": "^6.14.0",
     "babel-eslint": "^7.0.0",
-    "babel-jest": "^17.0.2",
+    "babel-jest": "18.0.0",
     "babel-loader": "^6.2.5",
     "babel-plugin-add-module-exports": "^0.2.1",
     "babel-plugin-dev-expression": "^0.2.1",
@@ -113,26 +111,26 @@
     "deep-freeze": "0.0.1",
     "del": "^2.2.2",
     "devtron": "^1.3.0",
-    "electron": "1.4.14",
+    "electron": "1.4.15",
     "electron-devtools-installer": "^2.0.1",
     "electron-packager": "^8.0.0",
     "electron-rebuild": "^1.2.1",
     "enzyme": "^2.7.0",
     "enzyme-to-json": "^1.4.5",
-    "eslint": "^3.10.2",
-    "eslint-config-airbnb": "^13.0.0",
-    "eslint-import-resolver-webpack": "^0.6.0",
+    "eslint": "^3.14.1",
+    "eslint-config-airbnb": "^14.0.0",
+    "eslint-import-resolver-webpack": "0.8.1",
     "eslint-loader": "^1.6.1",
     "eslint-plugin-import": "^2.2.0",
-    "eslint-plugin-jsx-a11y": "^2.2.3",
-    "eslint-plugin-react": "^6.7.1",
+    "eslint-plugin-jsx-a11y": "^3.0.2",
+    "eslint-plugin-react": "^6.9.0",
     "eslint-plugin-react-perf": "^2.0.4",
     "express": "^4.14.0",
     "extract-text-webpack-plugin": "^1.0.1",
     "fbjs-scripts": "^0.7.1",
-    "file-loader": "^0.9.0",
+    "file-loader": "0.10.0",
     "identity-obj-proxy": "^3.0.0",
-    "jest": "^17.0.3",
+    "jest": "^18.1.0",
     "jsdom": "^9.5.0",
     "json-loader": "^0.5.4",
     "less": "^2.7.1",
@@ -141,11 +139,11 @@
     "nyc": "^10.0.0",
     "postcss": "^5.2.5",
     "postcss-browser-reporter": "^0.5.0",
-    "postcss-custom-properties": "^5.0.1",
+    "postcss-custom-properties": "5.0.2",
     "postcss-load-config": "^1.0.0",
     "postcss-loader": "^1.2.0",
     "postcss-nested": "^1.0.0",
-    "postcss-reporter": "^2.0.0",
+    "postcss-reporter": "3.0.0",
     "postcss-smart-import": "^0.6.0",
     "postcss-url": "^5.1.2",
     "react-addons-test-utils": "^15.3.2",
@@ -155,10 +153,10 @@
     "sinon": "^1.17.6",
     "spectron": "^3.4.0",
     "style-loader": "^0.13.1",
-    "webpack": "^1.14.0",
+    "webpack": "1.14.0",
     "webpack-dev-middleware": "^1.8.3",
     "webpack-hot-middleware": "^2.12.2",
-    "webpack-merge": "^1.0.2",
+    "webpack-merge": "1.1.2",
     "why-did-you-update": "0.0.8"
   },
   "peerDependencies": {
