--- a/GPCCHS_E_VIS/src/common/src/main/js/common/package.json
+++ b/GPCCHS_E_VIS/src/common/src/main/js/common/package.json
@@ -24,7 +24,7 @@
   "devDependencies": {
     "babel-core": "^6.14.0",
     "babel-eslint": "^7.0.0",
-    "babel-jest": "^17.0.2",
+    "babel-jest": "18.0.0",
     "babel-loader": "^6.2.5",
     "babel-plugin-add-module-exports": "^0.2.1",
     "babel-plugin-dev-expression": "^0.2.1",
@@ -39,8 +39,8 @@
     "babel-register": "^6.16.0",
     "chai": "^3.5.0",
     "chai-properties": "^1.2.1",
-    "eslint": "^3.10.2",
-    "eslint-config-airbnb-base": "^10.0.1",
+    "eslint": "^3.14.1",
+    "eslint-config-airbnb-base": "^11.0.1",
     "eslint-plugin-import": "^2.2.0",
     "istanbul": "^0.4.5",
     "json-loader": "^0.5.4",
