--- a/GPCCHS_E_VIS/src/client/src/main/js/client/package.json
+++ b/GPCCHS_E_VIS/src/client/src/main/js/client/package.json
@@ -68,7 +68,6 @@
     "lodash": "^4.16.2",
     "mkdirp": "^0.5.1",
     "moment": "^2.17.1",
-    "node-uuid": "^1.4.7",
     "react": "^15.3.2",
     "react-bootstrap": "^0.30.5",
     "react-codemirror": "^0.3.0",
@@ -87,7 +86,8 @@
     "redux-thunk": "^2.1.0",
     "reselect": "^2.5.4",
     "source-map-support": "^0.4.2",
-    "updeep": "^1.0.0"
+    "updeep": "^1.0.0",
+    "uuid": "^3.0.1"
   },
   "devDependencies": {
     "asar": "0.13.0",
