--- a/GPCCHS_E_VIS/src/server/src/main/js/server/package.json
+++ b/GPCCHS_E_VIS/src/server/src/main/js/server/package.json
@@ -18,7 +18,7 @@
     "exit": "^0.1.2",
     "lodash": "^4.16.2",
     "lokijs": "^1.4.1",
-    "node-uuid": "^1.4.7"
+    "uuid": "^3.0.1"
   },
   "devDependencies": {
     "chai": "^3.5.0",
