--- a/GPCCHS_E_VIS/src/client/src/main/js/client/package.json
+++ b/GPCCHS_E_VIS/src/client/src/main/js/client/package.json
@@ -49,119 +49,119 @@
   "license": "ISC",
   "keywords": [],
   "dependencies": {
-    "ajv": "^4.9.2",
-    "async": "^2.1.4",
-    "bootstrap": "^3.3.7",
-    "chai-properties": "^1.2.1",
-    "classnames": "^2.2.5",
-    "codemirror": "^5.21.0",
-    "d3-format": "^1.0.2",
-    "d3-scale": "^1.0.4",
-    "d3-time-format": "^2.0.3",
-    "debug": "^2.2.0",
-    "deep-diff": "^0.3.4",
-    "electron-debug": "^1.0.1",
-    "html-to-react": "^1.2.2",
-    "htmlhint": "^0.9.13",
+    "ajv": "4.9.2",
+    "async": "2.1.4",
+    "bootstrap": "3.3.7",
+    "chai-properties": "1.2.1",
+    "classnames": "2.2.5",
+    "codemirror": "5.21.0",
+    "d3-format": "1.0.2",
+    "d3-scale": "1.0.4",
+    "d3-time-format": "2.0.3",
+    "debug": "2.2.0",
+    "deep-diff": "0.3.4",
+    "electron-debug": "1.0.1",
+    "html-to-react": "1.2.2",
+    "htmlhint": "0.9.13",
     "js-beautify": "1.6.8",
-    "lockfile": "^1.0.3",
-    "lodash": "^4.16.2",
-    "mkdirp": "^0.5.1",
-    "moment": "^2.17.1",
-    "react": "^15.3.2",
-    "react-bootstrap": "^0.30.5",
-    "react-codemirror": "^0.3.0",
-    "react-color": "^2.10.0",
-    "react-dimensions": "^1.3.0",
-    "react-dom": "^15.3.2",
-    "react-flatpickr": "^3.0.0",
-    "react-grid-layout": "^0.13.8",
+    "lockfile": "1.0.3",
+    "lodash": "4.16.2",
+    "mkdirp": "0.5.1",
+    "moment": "2.17.1",
+    "react": "15.3.2",
+    "react-bootstrap": "0.30.5",
+    "react-codemirror": "0.3.0",
+    "react-color": "2.10.0",
+    "react-dimensions": "1.3.0",
+    "react-dom": "15.3.2",
+    "react-flatpickr": "3.0.0",
+    "react-grid-layout": "0.13.8",
     "react-redux": "5.0.2",
-    "react-select": "^1.0.0-rc.2",
+    "react-select": "1.0.0-rc.2",
     "react-stockcharts": "0.6.1",
     "recompose": "0.22.0",
-    "redux": "^3.6.0",
-    "redux-electron-store": "^0.4.1",
-    "redux-form": "^6.4.3",
-    "redux-thunk": "^2.1.0",
-    "reselect": "^2.5.4",
-    "source-map-support": "^0.4.2",
-    "updeep": "^1.0.0",
-    "uuid": "^3.0.1"
+    "redux": "3.6.0",
+    "redux-electron-store": "0.4.1",
+    "redux-form": "6.4.3",
+    "redux-thunk": "2.1.0",
+    "reselect": "2.5.4",
+    "source-map-support": "0.4.2",
+    "updeep": "1.0.0",
+    "uuid": "3.0.1"
   },
   "devDependencies": {
     "asar": "0.13.0",
-    "babel-core": "^6.14.0",
-    "babel-eslint": "^7.0.0",
+    "babel-core": "6.14.0",
+    "babel-eslint": "7.0.0",
     "babel-jest": "18.0.0",
-    "babel-loader": "^6.2.5",
-    "babel-plugin-add-module-exports": "^0.2.1",
-    "babel-plugin-dev-expression": "^0.2.1",
-    "babel-plugin-transform-class-properties": "^6.16.0",
-    "babel-plugin-webpack-loaders": "^0.8.0",
-    "babel-polyfill": "^6.13.0",
-    "babel-preset-es2015": "^6.18.0",
-    "babel-preset-react": "^6.16.0",
-    "babel-preset-react-hmre": "^1.1.1",
-    "babel-preset-react-optimize": "^1.0.1",
-    "babel-preset-stage-0": "^6.5.0",
-    "babel-register": "^6.16.0",
-    "chai": "^3.5.0",
-    "css-loader": "^0.26.1",
+    "babel-loader": "6.2.5",
+    "babel-plugin-add-module-exports": "0.2.1",
+    "babel-plugin-dev-expression": "0.2.1",
+    "babel-plugin-transform-class-properties": "6.16.0",
+    "babel-plugin-webpack-loaders": "0.8.0",
+    "babel-polyfill": "6.13.0",
+    "babel-preset-es2015": "6.18.0",
+    "babel-preset-react": "6.16.0",
+    "babel-preset-react-hmre": "1.1.1",
+    "babel-preset-react-optimize": "1.0.1",
+    "babel-preset-stage-0": "6.5.0",
+    "babel-register": "6.16.0",
+    "chai": "3.5.0",
+    "css-loader": "0.26.1",
     "deep-freeze": "0.0.1",
-    "del": "^2.2.2",
-    "devtron": "^1.3.0",
+    "del": "2.2.2",
+    "devtron": "1.3.0",
     "electron": "1.4.15",
-    "electron-devtools-installer": "^2.0.1",
-    "electron-packager": "^8.0.0",
-    "electron-rebuild": "^1.2.1",
-    "enzyme": "^2.7.0",
-    "enzyme-to-json": "^1.4.5",
-    "eslint": "^3.14.1",
-    "eslint-config-airbnb": "^14.0.0",
+    "electron-devtools-installer": "2.0.1",
+    "electron-packager": "8.0.0",
+    "electron-rebuild": "1.2.1",
+    "enzyme": "2.7.0",
+    "enzyme-to-json": "1.4.5",
+    "eslint": "3.14.1",
+    "eslint-config-airbnb": "14.0.0",
     "eslint-import-resolver-webpack": "0.8.1",
-    "eslint-loader": "^1.6.1",
-    "eslint-plugin-import": "^2.2.0",
-    "eslint-plugin-jsx-a11y": "^3.0.2",
-    "eslint-plugin-react": "^6.9.0",
-    "eslint-plugin-react-perf": "^2.0.4",
-    "express": "^4.14.0",
-    "extract-text-webpack-plugin": "^1.0.1",
-    "fbjs-scripts": "^0.7.1",
+    "eslint-loader": "1.6.1",
+    "eslint-plugin-import": "2.2.0",
+    "eslint-plugin-jsx-a11y": "3.0.2",
+    "eslint-plugin-react": "6.9.0",
+    "eslint-plugin-react-perf": "2.0.4",
+    "express": "4.14.0",
+    "extract-text-webpack-plugin": "1.0.1",
+    "fbjs-scripts": "0.7.1",
     "file-loader": "0.10.0",
-    "identity-obj-proxy": "^3.0.0",
-    "jest": "^18.1.0",
-    "jsdom": "^9.5.0",
-    "json-loader": "^0.5.4",
-    "less": "^2.7.1",
-    "less-loader": "^2.2.3",
-    "mocha": "^3.2.0",
-    "nyc": "^10.0.0",
-    "postcss": "^5.2.5",
-    "postcss-browser-reporter": "^0.5.0",
+    "identity-obj-proxy": "3.0.0",
+    "jest": "18.1.0",
+    "jsdom": "9.5.0",
+    "json-loader": "0.5.4",
+    "less": "2.7.1",
+    "less-loader": "2.2.3",
+    "mocha": "3.2.0",
+    "nyc": "10.0.0",
+    "postcss": "5.2.5",
+    "postcss-browser-reporter": "0.5.0",
     "postcss-custom-properties": "5.0.2",
-    "postcss-load-config": "^1.0.0",
-    "postcss-loader": "^1.2.0",
-    "postcss-nested": "^1.0.0",
+    "postcss-load-config": "1.0.0",
+    "postcss-loader": "1.2.0",
+    "postcss-nested": "1.0.0",
     "postcss-reporter": "3.0.0",
-    "postcss-smart-import": "^0.6.0",
-    "postcss-url": "^5.1.2",
-    "react-addons-test-utils": "^15.3.2",
-    "react-test-renderer": "^15.4.1",
-    "redux-logger": "^2.6.1",
-    "rimraf": "^2.5.4",
-    "sinon": "^1.17.6",
-    "spectron": "^3.4.0",
-    "style-loader": "^0.13.1",
+    "postcss-smart-import": "0.6.0",
+    "postcss-url": "5.1.2",
+    "react-addons-test-utils": "15.3.2",
+    "react-test-renderer": "15.4.1",
+    "redux-logger": "2.6.1",
+    "rimraf": "2.5.4",
+    "sinon": "1.17.6",
+    "spectron": "3.4.0",
+    "style-loader": "0.13.1",
     "webpack": "1.14.0",
-    "webpack-dev-middleware": "^1.8.3",
-    "webpack-hot-middleware": "^2.12.2",
+    "webpack-dev-middleware": "1.8.3",
+    "webpack-hot-middleware": "2.12.2",
     "webpack-merge": "1.1.2",
     "why-did-you-update": "0.0.8"
   },
   "peerDependencies": {
     "common": "../../../../../common/src/main/js/common",
-    "d3-time": "^1.0.4"
+    "d3-time": "1.0.4"
   },
   "devEngines": {
     "node": "6.x",
