[FT:#3622] Update project dependencies (package.json file)

--- a/GPCCHS_E_VIS/src/server/src/main/js/server/package.json
+++ b/GPCCHS_E_VIS/src/server/src/main/js/server/package.json
@@ -14,22 +14,22 @@
     "tw": "npm test -- --watch"
   },
   "dependencies": {
-    "async": "2.1.4",
-    "exit": "0.1.2",
-    "lodash": "4.16.2",
-    "lokijs": "1.4.1",
-    "uuid": "3.0.1"
+    "async": "~2.1.4",
+    "exit": "~0.1.2",
+    "lodash": "~4.17.4",
+    "lokijs": "~1.4.2",
+    "uuid": "~3.0.1"
   },
   "devDependencies": {
-    "chai": "3.5.0",
-    "chai-jest-snapshot": "0.2.1",
-    "chai-properties": "1.2.1",
-    "eslint": "3.14.1",
-    "eslint-config-airbnb-base": "11.0.1",
-    "eslint-plugin-import": "2.2.0",
-    "istanbul": "0.4.5",
-    "mocha": "3.2.0",
-    "node-fetch": "1.6.3"
+    "chai": "~3.5.0",
+    "chai-jest-snapshot": "~0.2.1",
+    "chai-properties": "~1.2.1",
+    "eslint": "~3.14.1",
+    "eslint-config-airbnb-base": "~11.0.1",
+    "eslint-plugin-import": "~2.2.0",
+    "istanbul": "~0.4.5",
+    "mocha": "~3.2.0",
+    "node-fetch": "~1.6.3"
   },
   "peerDependencies": {
     "common": "../../../../../common/src/main/js/common"
