--- a/GPCCHS_E_VIS/src/client/src/main/js/client/package.json
+++ b/GPCCHS_E_VIS/src/client/src/main/js/client/package.json
@@ -19,6 +19,8 @@
     "build": "npm run build:main && npm run build:renderer",
     "build:main": "node -r babel-register -r ./lib/common/initParameters.js ./node_modules/.bin/webpack --config webpack/config.main.js --progress --profile --colors",
     "build:renderer": "NODE_ENV=production node -r babel-register -r ./lib/common/initParameters.js ./node_modules/.bin/webpack --config webpack/config.renderer.production.js --progress --profile --colors",
+    "stats:main": "BUNDLE_STATS=1 ANALYZER_PORT=4242 npm run build:main",
+    "stats:renderer": "BUNDLE_STATS=1 ANALYZER_PORT=4243 npm run build:renderer",
     "clean": "rimraf ./dist ./main.js ./main.js.map",
     "hello": "npm run link && npm install && [ -f config.local.json ] && echo || cp config.sample.json config.local.json",
     "link": "npm link ../../../../../common/src/main/js/common && npm link ../../../../../server/src/main/js/server && (cd ../../../../../server/src/main/js/server && npm run hello)",
@@ -155,6 +157,7 @@
     "spectron": "~3.5.0",
     "style-loader": "~0.13.1",
     "webpack": "~1.14.0",
+    "webpack-bundle-analyzer": "^2.2.1",
     "webpack-dev-middleware": "~1.9.0",
     "webpack-hot-middleware": "~2.16.1",
     "webpack-merge": "~1.1.2",
