--- a/GPCCHS_E_VIS/src/client/src/main/js/client/.eslintrc
+++ b/GPCCHS_E_VIS/src/client/src/main/js/client/.eslintrc
@@ -22,23 +22,34 @@
       "error",
       { "devDependencies": true, "peerDependencies": true }
     ],
-    "consistent-return": 0,
-    "no-restricted-syntax": 0,
-    "comma-dangle": 0,
-    "no-use-before-define": 0,
+    "comma-dangle": [
+      "warn",
+      {
+        "arrays": "always-multiline",
+        "objects": "always-multiline",
+        "imports": "always-multiline",
+        "exports": "always-multiline",
+        "functions": "never"
+      }
+    ],
     "import/no-unresolved": [2, { "ignore": ["electron", "common"] }],
-    "react/jsx-no-bind": ["warn"],
     "react-perf/jsx-no-new-array-as-prop": ["warn"],
     "react-perf/jsx-no-new-object-as-prop": ["warn"],
     "react-perf/jsx-no-new-function-as-prop": ["warn"],
-    "jsx-a11y/no-static-element-interactions": 0,
     "react/jsx-filename-extension": [2, { "extensions": [".js", ".jsx"] }],
-    "react/prefer-stateless-function": 0,
-    "generator-star-spacing": 0,
-    "react/forbid-prop-types": 0,
-    "react/require-default-props": 0,
+    "react/require-default-props": ["warn"],
     "react/no-unused-prop-types": ["warn", { "customValidators": [], "skipShapeProps": true }],
-    "react/no-array-index-key": ["warn"]
+    "react/no-array-index-key": ["warn"],
+    "consistent-return": ["warn"],
+    "react/forbid-prop-types": ["warn"],
+    "no-use-before-define": ["warn"],
+    "jsx-a11y/no-static-element-interactions": ["warn"],
+    "react/prefer-stateless-function": ["warn"],
+    "react/jsx-no-bind": ["warn"],
+    "no-unused-expressions": ["warn"],
+    "space-in-parens": ["warn"],
+    "space-before-blocks": ["warn"],
+    "no-restricted-syntax": ["warn"]
   },
   "plugins": [
     "import",
