[FT:#3622] Fix client .eslintrc configuration globals key

--- a/GPCCHS_E_VIS/src/client/src/main/js/client/.eslintrc
+++ b/GPCCHS_E_VIS/src/client/src/main/js/client/.eslintrc
@@ -10,7 +10,12 @@
     "node": true
   },
   "globals": {
-    "expect": true
+    "describe": true,
+    "it": true,
+    "before": true,
+    "after": true,
+    "beforeEach": true,
+    "afterEach": true
   },
   "rules": {
     "max-statements-per-line": ["warn", { "max": 1 }],
