[FT:#3622] Fix eslint configuration by adding es6 env and remove no-use-before-define rule

--- a/GPCCHS_E_VIS/src/client/src/main/js/client/.eslintrc
+++ b/GPCCHS_E_VIS/src/client/src/main/js/client/.eslintrc
@@ -7,7 +7,8 @@
   "env": {
     "browser": true,
     "mocha": true,
-    "node": true
+    "node": true,
+    "es6": true
   },
   "globals": {
     "expect": true,
@@ -24,6 +25,7 @@
     "max-statements": ["warn", 100],
     "max-depth": ["warn", 7],
     "no-underscore-dangle": 0,
+    "no-use-before-define": 0,
     "import/no-extraneous-dependencies": [
       "error",
       { "devDependencies": true, "peerDependencies": true }
@@ -47,7 +49,6 @@
     "react/no-array-index-key": ["warn"],
     "consistent-return": ["warn"],
     "react/forbid-prop-types": ["warn"],
-    "no-use-before-define": ["warn"],
     "jsx-a11y/no-static-element-interactions": ["warn"],
     "react/prefer-stateless-function": ["warn"],
     "react/jsx-no-bind": ["warn"],
