[FT:#3622] Fix state colors and config file

--- a/GPCCHS_E_VIS/src/client/src/main/js/client/config.default.json
+++ b/GPCCHS_E_VIS/src/client/src/main/js/client/config.default.json
@@ -2,5 +2,140 @@
   "PROFILING": "off",
   "MONITORING": "off",
   "DEBUG": "off",
-  "FMD_ROOT_DIR": "/data/isis/documents"
+  "FMD_ROOT_DIR": "/data/isis/documents",
+  "STATE_COLORS": {
+    "alarm": "orangered",
+    "critical": "red",
+    "info": "white",
+    "outOfRange": "grey",
+    "severe": "darkred",
+    "warning": "orange",
+    "nonsignificant": "lightgrey",
+    "obsolete": "tan"
+  },
+  "USER_MANUAL_URL": "http://SHOULD.BE.REPLACED",
+  "UNITS": {
+    "distance": [
+      "m",
+      "km",
+      "cm",
+      "inch",
+      "mm",
+      "dm",
+      "in",
+      "ft",
+      "nmile",
+      "yd",
+      "mile"
+    ],
+    "time": [
+      "s",
+      "ms",
+      "year",
+      "century",
+      "day",
+      "h",
+      "min",
+      "us",
+      "ns"
+    ],
+    "mass": [
+      "g",
+      "kg",
+      "mg",
+      "t",
+      "lb",
+      "oz",
+      "slug",
+      "lb*g*s/ft"
+    ],
+    "frequency": [
+      "Hz",
+      "kHz",
+      "MHz",
+      "GHz"
+    ],
+    "angles": [
+      "deg",
+      "rad",
+      "grad",
+      "gr",
+      "tr",
+      "sarc"
+    ],
+    "force": [
+      "N",
+      "kg*m/s²",
+      "kgf"
+    ],
+    "pressure": [
+      "Pa",
+      "N/m²",
+      "bar",
+      "hPa",
+      "kPa",
+      "mbar",
+      "kbar"
+    ],
+    "energy": [
+      "J",
+      "N*m",
+      "kJ",
+      "MJ"
+    ],
+    "power": [
+      "W",
+      "MW",
+      "kW",
+      "J/s"
+    ],
+    "solarFlow": [
+      "sfu",
+      "W/m²"
+    ],
+    "temperature": [
+      "C",
+      "F",
+      "K"
+    ],
+    "propagation": [
+      "mdis",
+      "us"
+    ],
+    "electrical": [
+      "mA",
+      "A",
+      "W/A",
+      "V/A",
+      "ohm"
+    ],
+    "magnetic": [
+      "T",
+      "G"
+    ],
+    "BitsPerSeconds": [
+      "bps",
+      "SU"
+    ],
+    "timeShift": [
+      "J2000",
+      "JD",
+      "RJD",
+      "MJD",
+      "TJD",
+      "UNIX",
+      "G50",
+      "GPS"
+    ],
+    "speed": [
+      "m.s-1",
+      "km.s-1",
+      "m.h-1",
+      "km.h-1"
+    ],
+    "speedBig": [
+      "al.s-1",
+      "parsec.s-1"
+    ]
+  }
 }
