--- a/GPCCHS_E_VIS/src/server/src/main/js/server/package.json
+++ b/GPCCHS_E_VIS/src/server/src/main/js/server/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "coverage": "istanbul cover node_modules/mocha/bin/_mocha \"lib/**/*.spec.js\" -- -R spec",
     "hello": "npm install && npm link ../../../../../common/src/main/js/common",
-    "lint": "eslint lib e2e *.js",
+    "lint": "eslint .",
     "start": "node index",
     "test": "mocha \"lib/**/*.spec.js\"",
     "test:watch": "npm run test -- --watch",
