--- a/GPCCHS_E_VIS/src/client/src/main/js/client/config.default.json
+++ b/GPCCHS_E_VIS/src/client/src/main/js/client/config.default.json
@@ -3,6 +3,8 @@
   "MONITORING": "off",
   "DEBUG": "off",
   "FMD_ROOT_DIR": "/data/isis/documents",
+  "HSC_VISUWINDOW_MAX_LENGTH": 7200000,
+  "HSC_VISUWINDOW_CURRENT_UPPER_MIN_MARGIN": 0.1,
   "STATE_COLORS": {
     "alarm": "orangered",
     "critical": "red",
