--- a/GPCCHS_E_VIS/src/client/src/main/js/client/config.default.json
+++ b/GPCCHS_E_VIS/src/client/src/main/js/client/config.default.json
@@ -3,6 +3,7 @@
   "MONITORING": "off",
   "DEBUG": "off",
   "ORCHESTRATION_FREQUENCY": 500,
+  "CACHE_INVALIDATION_FREQUENCY": 300000,
   "FMD_ROOT_DIR": "/data/isis/documents",
   "VISUWINDOW_MAX_LENGTH": 7200000,
   "VISUWINDOW_CURRENT_UPPER_MIN_MARGIN": 0.1,
