--- a/GPCCHS_E_VIS/src/client/src/main/js/client/config.default.json
+++ b/GPCCHS_E_VIS/src/client/src/main/js/client/config.default.json
@@ -4,6 +4,8 @@
   "DEBUG": "off",
   "ORCHESTRATION_FREQUENCY": 500,
   "CACHE_INVALIDATION_FREQUENCY": 300000,
+  "WILDCARD_CHARACTER": "*",
+  "DEFAULT_FIELD": "extractedValue",
   "LOG_FILENAME": "gpcchs.log",
   "FMD_ROOT_DIR": "/data/isis/documents",
   "VISUWINDOW_MAX_LENGTH": 7200000,
