[FT:#5317] packaging dedupe dependencies and refactor for lodash

--- a/GPCCHS_E_VIS/src/client/src/main/js/client/.babelrc
+++ b/GPCCHS_E_VIS/src/client/src/main/js/client/.babelrc
@@ -5,7 +5,8 @@
     "react"
   ],
   "plugins": [
-    "add-module-exports"
+    "add-module-exports",
+    "babel-plugin-lodash"
   ],
   "env": {
     "production": {
