--- a/GPCCHS_E_VIS/src/client/src/main/js/client/package.json
+++ b/GPCCHS_E_VIS/src/client/src/main/js/client/package.json
@@ -100,6 +100,7 @@
     "babel-loader": "~6.2.5",
     "babel-plugin-add-module-exports": "~0.2.1",
     "babel-plugin-dev-expression": "~0.2.1",
+    "babel-plugin-lodash": "^3.2.11",
     "babel-plugin-transform-class-properties": "~6.22.0",
     "babel-plugin-webpack-loaders": "~0.8.0",
     "babel-polyfill": "~6.22.0",
