[FT:#3622] Add an error message in dynamic view get default field regarding COM object

--- a/GPCCHS_E_VIS/src/client/src/main/js/client/config.default.json
+++ b/GPCCHS_E_VIS/src/client/src/main/js/client/config.default.json
@@ -5,7 +5,12 @@
   "ORCHESTRATION_FREQUENCY": 500,
   "CACHE_INVALIDATION_FREQUENCY": 300000,
   "WILDCARD_CHARACTER": "*",
-  "DEFAULT_FIELD": "extractedValue",
+  "DEFAULT_FIELD": {
+    "TM": "extractedValue",
+    "RM": "extractedValue",
+    "CLCW": "extractedValue",
+    "ReportingParameter": "extractedValue"
+  },
   "LOG_FILENAME": "gpcchs.log",
   "FMD_ROOT_DIR": "/data/isis/documents",
   "VISUWINDOW_MAX_LENGTH": 7200000,
