--- a/GPCCHS_E_VIS/src/client/src/main/js/client/package.json
+++ b/GPCCHS_E_VIS/src/client/src/main/js/client/package.json
@@ -58,8 +58,10 @@
     "chai-properties": "~1.2.1",
     "classnames": "~2.2.5",
     "codemirror": "~5.23.0",
+    "d3-axis": "^1.0.4",
     "d3-format": "~1.0.2",
     "d3-scale": "~1.0.4",
+    "d3-selection": "^1.0.3",
     "d3-time-format": "~2.0.3",
     "debug": "~2.6.0",
     "deep-diff": "~0.3.4",
