--- a/GPCCHS_E_VIS/src/impl/parent/pom.xml
+++ b/GPCCHS_E_VIS/src/impl/parent/pom.xml
@@ -4,12 +4,12 @@
   <groupId>fr.cnes.lpisis.gpcc</groupId>
   <artifactId>gpcchs_e_vis-parent</artifactId>
   <packaging>pom</packaging>
-  <version>1.1.0-R7S4-SNAPSHOT</version>
+  <version>1.1.0</version>
   <name>${project.groupId}.${project.artifactId}</name>
   <parent>
     <groupId>fr.cnes.lpisis.gpcc</groupId>
     <artifactId>gpcchs-parent</artifactId>
-    <version>1.1.0-R7S4-SNAPSHOT</version>
+    <version>1.1.0</version>
     <relativePath>../../../../src/impl/parent</relativePath>
   </parent>
   <dependencyManagement>
