--- a/GPCCHS_E_VIS/src/server/pom.xml
+++ b/GPCCHS_E_VIS/src/server/pom.xml
@@ -5,12 +5,12 @@
   <groupId>fr.cnes.lpisis.gpcc.js</groupId>
   <artifactId>gpcchs_e_vis_server</artifactId>
   <packaging>isis-js-bundle</packaging>
-  <version>1.1.0-R7S4-SNAPSHOT</version>
+  <version>1.1.0</version>
   <name>${project.groupId}.${project.artifactId}</name>
   <parent>
     <groupId>fr.cnes.lpisis.gpcc</groupId>
     <artifactId>gpcchs_e_vis-parent</artifactId>
-    <version>1.1.0-R7S4-SNAPSHOT</version>
+    <version>1.1.0</version>
     <relativePath/>
   </parent>
   <properties>
