--- a/src/impl/system/pom.xml
+++ b/src/impl/system/pom.xml
@@ -4,12 +4,12 @@
   <groupId>fr.cnes.lpisis.gpcc</groupId>
   <artifactId>gpcchs-system</artifactId>
   <packaging>pom</packaging>
-  <version>1.1.0-R7S4-SNAPSHOT</version>
+  <version>1.1.0</version>
   <name>${project.groupId}.${project.artifactId}</name>
   <parent>
     <groupId>fr.cnes.lpisis.gpcc</groupId>
     <artifactId>gpcc-parent</artifactId>
-    <version>1.1.0-R7S4-SNAPSHOT</version>
+    <version>1.1.0</version>
     <relativePath/>
   </parent>
   <properties>
