[FT:#3622] Add lint rule on selector signatures

--- a/GPCCHS_E_VIS/src/client/src/main/js/client/.eslintrc
+++ b/GPCCHS_E_VIS/src/client/src/main/js/client/.eslintrc
@@ -55,12 +55,14 @@
     "no-unused-expressions": ["warn"],
     "space-in-parens": ["warn"],
     "space-before-blocks": ["warn"],
-    "no-restricted-syntax": ["warn"]
+    "no-restricted-syntax": ["warn"],
+    "reselect/signature": ["warn"]
   },
   "plugins": [
     "import",
     "react",
-    "react-perf"
+    "react-perf",
+    "reselect"
   ],
   "settings": {
     "import/resolver": {
