--- a/GPCCHS_E_VIS/src/client/src/main/js/client/config.default.json
+++ b/GPCCHS_E_VIS/src/client/src/main/js/client/config.default.json
@@ -11,7 +11,7 @@
     "ReportingParameter": "extractedValue"
   },
   "LOG_FILENAME": "gpcchs.log",
-  "FMD_ROOT_DIR": "/data/isis/documents",
+  "ISIS_DOCUMENTS_ROOT": "/data/isis/documents",
   "VISUWINDOW_MAX_LENGTH": 7200000,
   "VISUWINDOW_CURRENT_UPPER_MIN_MARGIN": 0.1,
   "STATE_COLORS": {
