--- a/GPCCHS_E_VIS/src/client/src/main/js/client/config.sample.json
+++ b/GPCCHS_E_VIS/src/client/src/main/js/client/config.sample.json
@@ -2,7 +2,7 @@
   "LOG": "console",
   "PROFILING": "off",
   "DEBUG": "on",
-  "FMD_ROOT_DIR": "/data/work/gitRepositories/LPISIS/GPCCHS/GPCCHS_E_VIS/src/client/src/main/js/client/data",
+  "ISIS_DOCUMENTS_ROOT": "/data/work/gitRepositories/LPISIS/GPCCHS/GPCCHS_E_VIS/src/client/src/main/js/client/data",
   "WEBPACK_PORT": 3100,
   "NODE_PATH": "/usr/share/isis/node-v6.3.0-linux-x64/bin/node",
   "ZMQ_GPCCDC_PUSH": "tcp://127.0.0.1:5042",
