--- a/ddc/ddc-ng.cfg
+++ b/ddc/ddc-ng.cfg
@@ -4,9 +4,10 @@ tool = git
 
 [Article]
 author = Philippe Combes
-justification=LP ISIS v1.1.0 delivery for CNES QS
-name = Host Structure
-otcode = GPCCHS
+name = GPCCHS
+otcode = GPCC
 version_branch=
-version_date=06/03/2017
-version_status=PBF status
+version_date=2017/02/28
+version_status=
+reference=
+justification=Delivery of LPISIS, version 1.1.0
