--- a/GPCCHS_E_VIS/src/client/src/main/js/client/package.json
+++ b/GPCCHS_E_VIS/src/client/src/main/js/client/package.json
@@ -156,6 +156,7 @@
     "redux-logger": "~2.8.0",
     "rimraf": "~2.5.4",
     "sinon": "~1.17.6",
+    "sinon-chai": "^2.8.0",
     "spectron": "~3.5.0",
     "style-loader": "~0.13.1",
     "webpack": "~1.14.0",
