--- a/GPCCHS_E_VIS/src/tools/pom.xml
+++ b/GPCCHS_E_VIS/src/tools/pom.xml
@@ -5,12 +5,12 @@
   <groupId>fr.cnes.lpisis.gpcc.python</groupId>
   <artifactId>gpcchs_e_vis_tools</artifactId>
   <packaging>isis-python-module-dependency</packaging>
-  <version>1.1.0</version>
+  <version>1.1.1-R8S1-SNAPSHOT</version>
   <name>${project.groupId}.${project.artifactId}</name>
   <parent>
     <groupId>fr.cnes.lpisis.gpcc</groupId>
     <artifactId>gpcc-parent</artifactId>
-    <version>1.1.0</version>
+    <version>1.1.1-R8S1-SNAPSHOT</version>
     <relativePath/>
   </parent>
   <properties>
