--- a/GPCCHS_E_VIS/src/client/src/main/js/client/package.json
+++ b/GPCCHS_E_VIS/src/client/src/main/js/client/package.json
@@ -36,7 +36,7 @@
     "snapshot:clean": "jest -u",
     "tw": "npm test -- --watch",
     "wp": "npm run webpack",
-    "webpack": "node -r babel-register -r ./lib/common/initParameters.js webpack/server.js"
+    "webpack": "webpack-dashboard -- node -r babel-register -r ./lib/common/initParameters.js webpack/server.js"
   },
   "bin": {
     "electron": "./node_modules/.bin/electron"
@@ -157,6 +157,7 @@
     "spectron": "~3.5.0",
     "style-loader": "~0.13.1",
     "webpack": "~1.14.0",
+    "webpack-dashboard": "^0.3.0",
     "webpack-dev-middleware": "~1.9.0",
     "webpack-hot-middleware": "~2.16.1",
     "webpack-merge": "~1.1.2",
