--- a/GPCCHS_E_VIS/src/launcher/pom.xml
+++ b/GPCCHS_E_VIS/src/launcher/pom.xml
@@ -44,6 +44,13 @@
       <optional>true</optional>
     </dependency>
     <dependency>
+      <groupId>fr.cnes.lpisis.gpds.js</groupId>
+      <artifactId>gpds_rtd</artifactId>
+      <type>isis-js-module-dependency</type>
+      <classifier>unix_dev</classifier>
+      <optional>true</optional>
+    </dependency>
+    <dependency>
       <groupId>fr.cnes.lpisis.cots</groupId>
       <artifactId>zmq</artifactId>
       <type>isis-cots</type>
