--- a/GPCCHS_E_VIS/src/client/src/main/js/client/package.json
+++ b/GPCCHS_E_VIS/src/client/src/main/js/client/package.json
@@ -56,6 +56,7 @@
     "chai-properties": "~1.2.1",
     "classnames": "~2.2.5",
     "codemirror": "~5.23.0",
+    "d3-array": "^1.1.1",
     "d3-axis": "^1.0.4",
     "d3-format": "~1.0.2",
     "d3-scale": "~1.0.4",
