--- a/GPCCHS_E_VIS/src/client/src/main/js/client/package.json
+++ b/GPCCHS_E_VIS/src/client/src/main/js/client/package.json
@@ -84,6 +84,7 @@
     "react-redux": "~5.0.2",
     "react-select": "~1.0.0-rc.2",
     "react-stockcharts": "~0.6.1",
+    "react-treebeard": "^1.1.4",
     "redux": "~3.6.0",
     "redux-electron-store": "~0.4.1",
     "redux-form": "~6.5.0",
