--- a/GPCCHS_E_VIS/src/client/src/main/js/client/package.json
+++ b/GPCCHS_E_VIS/src/client/src/main/js/client/package.json
@@ -71,6 +71,7 @@
     "js-beautify": "~1.6.8",
     "lockfile": "~1.0.3",
     "lodash": "~4.17.4",
+    "long": "^3.2.0",
     "mkdirp": "~0.5.1",
     "moment": "~2.17.1",
     "react": "~15.4.2",
