--- a/GPCCHS_E_VIS/src/client/src/main/js/client/config.default.json
+++ b/GPCCHS_E_VIS/src/client/src/main/js/client/config.default.json
@@ -1,6 +1,7 @@
 {
   "PROFILING": "off",
   "DEBUG": "off",
+  "REALTIME": "off",
   "WDYU": "off",
   "ORCHESTRATION_FREQUENCY": 500,
   "CACHE_INVALIDATION_FREQUENCY": 300000,
