--- a/GPCCHS_E_VIS/src/client/src/main/js/client/package.json
+++ b/GPCCHS_E_VIS/src/client/src/main/js/client/package.json
@@ -76,7 +76,7 @@
     "react-bootstrap": "~0.30.5",
     "react-codemirror": "~0.3.0",
     "react-color": "~2.11.1",
-    "react-dimensions": "~1.3.0",
+    "react-dimensions": "^2.0.0-alpha1",
     "react-dom": "~15.4.2",
     "react-flatpickr": "~3.0.0",
     "react-grid-layout": "~0.13.8",
