[FT:#5828] Remove react-dimensions from project, use custom HOC

--- a/GPCCHS_E_VIS/src/client/src/main/js/client/package.json
+++ b/GPCCHS_E_VIS/src/client/src/main/js/client/package.json
@@ -65,6 +65,7 @@
     "debug": "~2.6.0",
     "deep-diff": "~0.3.4",
     "electron-debug": "~1.1.0",
+    "element-resize-event": "^2.0.7",
     "html-to-react": "~1.2.2",
     "htmlhint": "~0.9.13",
     "js-beautify": "~1.6.8",
@@ -76,7 +77,6 @@
     "react-bootstrap": "~0.30.5",
     "react-codemirror": "~0.3.0",
     "react-color": "~2.11.1",
-    "react-dimensions": "^2.0.0-alpha1",
     "react-dom": "~15.4.2",
     "react-flatpickr": "~3.0.0",
     "react-grid-layout": "~0.13.8",
