[FT:#5828] Update eslint reselect to 6.0.0

--- a/GPCCHS_E_VIS/src/client/src/main/js/client/.eslintrc
+++ b/GPCCHS_E_VIS/src/client/src/main/js/client/.eslintrc
@@ -56,7 +56,9 @@
     "space-in-parens": ["warn"],
     "space-before-blocks": ["warn"],
     "no-restricted-syntax": ["warn"],
-    "reselect/signature": ["warn"]
+    "reselect/first-param-name": "error",
+    "reselect/maximum-arity": "error",
+    "reselect/second-param-destructured": "error",
   },
   "plugins": [
     "import",
