--- a/src/impl/system/pom.xml
+++ b/src/impl/system/pom.xml
@@ -14,7 +14,7 @@
   </parent>
   <properties>
     <gpcchs.version>${gpcc.version}</gpcchs.version>
-    <gpcchs.cache.version>1.1.0</gpcchs.cache.version>
+    <gpcchs.cache.version>${gpcchs.version}</gpcchs.cache.version>
   </properties>
   <dependencyManagement>
     <dependencies>
