[FT:#5828] Draft the resizable panels and cleanup components props (views not functionnal)

--- a/GPCCHS_E_VIS/src/client/src/main/js/client/package.json
+++ b/GPCCHS_E_VIS/src/client/src/main/js/client/package.json
@@ -81,6 +81,7 @@
     "react-flatpickr": "~3.0.0",
     "react-grid-layout": "~0.13.8",
     "react-json-inspector": "^7.0.0",
+    "react-panelgroup": "^1.0.2",
     "react-redux": "~5.0.2",
     "react-select": "~1.0.0-rc.2",
     "redux": "~3.6.0",
