--- a/GPCCHS_E_VIS/src/client/src/main/js/client/package.json
+++ b/GPCCHS_E_VIS/src/client/src/main/js/client/package.json
@@ -121,11 +121,12 @@
     "electron-rebuild": "~1.5.7",
     "enzyme": "~2.7.0",
     "enzyme-to-json": "~1.4.5",
-    "eslint": "~3.14.1",
+    "eslint": "^3.18.0",
     "eslint-config-airbnb": "~14.0.0",
+    "eslint-config-airbnb-base": "^11.1.1",
     "eslint-import-resolver-webpack": "~0.8.1",
     "eslint-loader": "~1.6.1",
-    "eslint-plugin-import": "~2.2.0",
+    "eslint-plugin-import": "^2.2.0",
     "eslint-plugin-jsx-a11y": "~3.0.2",
     "eslint-plugin-react": "~6.9.0",
     "eslint-plugin-react-perf": "~2.0.4",
