--- a/GPCCHS_E_VIS/src/common/src/main/js/common/package.json
+++ b/GPCCHS_E_VIS/src/common/src/main/js/common/package.json
@@ -39,9 +39,9 @@
     "babel-register": "~6.22.0",
     "chai": "~3.5.0",
     "chai-properties": "~1.2.1",
-    "eslint": "~3.14.1",
-    "eslint-config-airbnb-base": "~11.0.1",
-    "eslint-plugin-import": "~2.2.0",
+    "eslint": "^3.18.0",
+    "eslint-config-airbnb-base": "^11.1.1",
+    "eslint-plugin-import": "^2.2.0",
     "istanbul": "~0.4.5",
     "json-loader": "~0.5.4",
     "long": "^3.2.0",
