--- a/GPCCHS_E_VIS/src/server/src/main/js/server/package.json
+++ b/GPCCHS_E_VIS/src/server/src/main/js/server/package.json
@@ -24,9 +24,9 @@
     "chai": "~3.5.0",
     "chai-jest-snapshot": "~0.2.1",
     "chai-properties": "~1.2.1",
-    "eslint": "~3.14.1",
-    "eslint-config-airbnb-base": "~11.0.1",
-    "eslint-plugin-import": "~2.2.0",
+    "eslint": "^3.18.0",
+    "eslint-config-airbnb-base": "^11.1.1",
+    "eslint-plugin-import": "^2.2.0",
     "istanbul": "~0.4.5",
     "mocha": "~3.2.0",
     "node-fetch": "~1.6.3"
