[FT:#5828] Update eslint plugin reselect, use config:all

--- a/GPCCHS_E_VIS/src/client/src/main/js/client/.eslintrc
+++ b/GPCCHS_E_VIS/src/client/src/main/js/client/.eslintrc
@@ -1,7 +1,8 @@
 {
   "extends": [
     "airbnb",
-    "plugin:react-perf/recommended"
+    "plugin:react-perf/recommended",
+    "plugin:reselect/all"
   ],
   "parser": "babel-eslint",
   "env": {
@@ -55,10 +56,7 @@
     "no-unused-expressions": ["warn"],
     "space-in-parens": ["warn"],
     "space-before-blocks": ["warn"],
-    "no-restricted-syntax": ["warn"],
-    "reselect/first-param-name": "error",
-    "reselect/maximum-arity": "error",
-    "reselect/second-param-destructured": "error",
+    "no-restricted-syntax": ["warn"]
   },
   "plugins": [
     "import",
