--- a/GPCCHS_E_VIS/src/client/src/main/js/client/package.json
+++ b/GPCCHS_E_VIS/src/client/src/main/js/client/package.json
@@ -73,6 +73,7 @@
     "lodash": "~4.17.4",
     "mkdirp": "~0.5.1",
     "moment": "~2.17.1",
+    "open": "0.0.5",
     "react": "~15.4.2",
     "react-bootstrap": "~0.30.5",
     "react-codemirror": "~0.3.0",
