[FT:#6302] Add comment and fix coding convetions warning and un-needed relaxations

--- a/GPCCHS_E_VIS/src/common/src/main/js/common/.eslintrc
+++ b/GPCCHS_E_VIS/src/common/src/main/js/common/.eslintrc
@@ -15,6 +15,7 @@
     "max-statements": ["warn", 100],
     "max-depth": ["warn", 7],
     "no-underscore-dangle": 0,
+    "no-use-before-define": 0,
     "comma-dangle": [
       "error",
       {
