[FT:#5822] Fix RTD module installation on development instance

--- a/GPCCHS_E_VIS/src/client/src/main/js/client/config.sample.json
+++ b/GPCCHS_E_VIS/src/client/src/main/js/client/config.sample.json
@@ -9,5 +9,6 @@
   "ZMQ_GPCCDC_PUSH": "tcp://127.0.0.1:5042",
   "ZMQ_GPCCDC_PULL": "tcp://127.0.0.1:5043",
   "WORKSPACE": "dev.workspace.json",
-  "STUB_DC_ON": "on"
+  "STUB_DC_ON": "on",
+  "STUB_RTD_ON": "on"
 }
