[FT:#5822] Fix socket connection error on openInspector

--- a/GPCCHS_E_VIS/src/client/src/main/js/client/config.sample.json
+++ b/GPCCHS_E_VIS/src/client/src/main/js/client/config.sample.json
@@ -10,5 +10,6 @@
   "ZMQ_GPCCDC_PULL": "tcp://127.0.0.1:5043",
   "WORKSPACE": "dev.workspace.json",
   "STUB_DC_ON": "on",
-  "STUB_RTD_ON": "on"
+  "STUB_RTD_ON": "on",
+  "RTD_UNIX_SOCKET": "/data/isis/work/redis/rtdRedisDb.sock"
 }
