--- a/GPCCHS_E_VIS/src/common/src/main/js/common/.eslintrc
+++ b/GPCCHS_E_VIS/src/common/src/main/js/common/.eslintrc
@@ -16,6 +16,13 @@
     "max-depth": ["warn", 7],
     "no-underscore-dangle": 0,
     "no-use-before-define": 0,
+    "max-len": ["error", 100, 2, {
+      "ignoreUrls": true,
+      "ignoreComments": true,
+      "ignoreRegExpLiterals": true,
+      "ignoreStrings": true,
+      "ignoreTemplateLiterals": true
+    }],
     "comma-dangle": [
       "error",
       {
