--- a/GPCCHS_E_VIS/src/server/src/main/js/server/.eslintrc
+++ b/GPCCHS_E_VIS/src/server/src/main/js/server/.eslintrc
@@ -15,6 +15,13 @@
     "max-statements": ["warn", 100],
     "max-depth": ["warn", 7],
     "no-underscore-dangle": 0,
+    "max-len": ["error", 100, 2, {
+      "ignoreUrls": true,
+      "ignoreComments": true,
+      "ignoreRegExpLiterals": true,
+      "ignoreStrings": true,
+      "ignoreTemplateLiterals": true
+    }],
     "comma-dangle": [
       "error",
       {
