--- a/GPCCHS_E_VIS/src/common/src/main/js/common/package.json
+++ b/GPCCHS_E_VIS/src/common/src/main/js/common/package.json
@@ -12,7 +12,7 @@
     "dc-reg": "DEBUG=GPCCHS:* LEVEL=INFO ZMQ_GPCCDC_PUSH=tcp://127.0.0.1:5042 ZMQ_GPCCDC_PULL=tcp://127.0.0.1:49165 node stubs/dcTestReg.js"
   },
   "dependencies": {
-    "async": "~2.1.4",
+    "async": "~2.3.0",
     "bytebuffer": "~5.0.1",
     "debug": "~2.6.0",
     "lodash": "~4.17.2",
@@ -20,9 +20,7 @@
     "minimist": "~1.2.0",
     "protobufjs": "~5.0.1",
     "winston": "~2.3.0",
-    "zmq": "~2.15.3"
-  },
-  "devDependencies": {
+    "zmq": "~2.15.3",
     "babel-core": "~6.22.1",
     "babel-eslint": "~7.1.1",
     "babel-jest": "~18.0.0",
