[FT:#5828] Creation of display queries to pull data from server and always add new data to queue

--- a/GPCCHS_E_VIS/src/client/src/main/js/client/config.default.json
+++ b/GPCCHS_E_VIS/src/client/src/main/js/client/config.default.json
@@ -26,6 +26,7 @@
     "nonsignificant": "lightgrey",
     "obsolete": "tan"
   },
+  "FORECAST": 30000,
   "STRING_PLOT_VALUE": 1,
   "USER_MANUAL_URL": "http://vmisisaivcontrol01.cnes-isis.toulouse.atos.net/farm/WIKI_ISIS_GPA/doku.php?id=isis:lp:sum:gpvi:toc",
   "UNITS": {
